--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    android:visibility="visible"
-    tools:context=".mothers.MotherProfile">
+    tools:context=".mothers.EditProfileActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -69,7 +67,7 @@
                 android:orientation="vertical"
                 android:paddingTop="10dp">
 
-                <TextView
+                <EditText
                     android:id="@+id/fullname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -83,7 +81,7 @@
                     android:textColor="@color/textcolor"
                     android:textSize="16dp" />
 
-                <TextView
+                <EditText
                     android:id="@+id/cell"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -100,9 +98,9 @@
                     android:textSize="16sp"
                     android:visibility="visible">
 
-                </TextView>
+                </EditText>
 
-                <TextView
+                <EditText
                     android:id="@+id/location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -119,7 +117,7 @@
                     android:textSize="16dp"
                     android:visibility="visible" />
 
-                <TextView
+                <EditText
                     android:id="@+id/gender"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -137,7 +135,7 @@
                     android:visibility="visible" />
 
 
-                <TextView
+                <EditText
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -178,7 +176,7 @@
                     android:fontFamily="casual"
                     android:gravity="center"
                     android:padding="10dp"
-                    android:text="Save"
+                    android:text="Edit Profile"
                     android:textColor="@color/background"
                     android:textSize="16dp"
                     android:textStyle="bold" />
@@ -186,3 +184,5 @@
         </RelativeLayout>
     </FrameLayout>
 </ScrollView>
+
+
