--- a/app/src/main/res/layout/activity_doctor_home.xml
+++ b/app/src/main/res/layout/activity_doctor_home.xml
@@ -34,7 +34,7 @@
                 android:layout_height="70dp"
                 android:layout_weight="1"
                 android:background="@color/button"
-                app:srcCompat="@drawable/logo11" />
+                app:srcCompat="@drawable/doctor" />
 
             <TextView
                 android:id="@+id/textView4"
@@ -78,9 +78,11 @@
                     android:orientation="vertical">
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/card_doctor_profile"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="10dp">
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="20dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -91,13 +93,14 @@
                             <ImageView
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
-                                app:srcCompat="@drawable/doctorinformation" />
+                                app:srcCompat="@drawable/imgdoctorprofile" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="Doctor Profile" />
+                                android:text="Doctor Profile"
+                                android:textStyle="bold" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
@@ -111,7 +114,8 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="10dp">
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="20dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -121,15 +125,16 @@
 
                             <ImageView
                                 android:layout_width="100dp"
-                                android:layout_height="100dp"
-                                app:srcCompat="@drawable/doctorinformation" />
+                                android:layout_height="106dp"
+                                app:srcCompat="@drawable/imgreceivedapp" />
 
                             <TextView
                                 android:id="@+id/textView2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="Appoinment" />
+                                android:text="My Appionment"
+                                android:textStyle="bold" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
@@ -152,7 +157,8 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="10dp">
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="20dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -164,14 +170,15 @@
                                 android:id="@+id/imageVie"
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
-                                app:srcCompat="@drawable/helppost" />
+                                app:srcCompat="@drawable/imgviewhelp" />
 
                             <TextView
                                 android:id="@+id/textView"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="Mother Post" />
+                                android:text="View Help Post"
+                                android:textStyle="bold" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
@@ -185,7 +192,8 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="10dp">
+                        android:layout_margin="10dp"
+                        app:cardCornerRadius="20dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -197,13 +205,14 @@
                                 android:id="@+id/imageView3"
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
-                                app:srcCompat="@drawable/doctorinformation" />
+                                app:srcCompat="@drawable/logout" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="Logout" />
+                                android:text="Logout"
+                                android:textStyle="bold" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
