--- a/app/src/main/res/layout/activity_doctor_profile.xml
+++ b/app/src/main/res/layout/activity_doctor_profile.xml
@@ -164,7 +164,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/update_profile"
+                    android:id="@+id/mother_update_profile"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
 
