--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -146,7 +146,7 @@
                     android:layout_marginRight="35dp"
                     android:background="@drawable/border"
                     android:gravity="center"
-                    android:hint="Password"
+                    android:hint="******"
                     android:inputType="textPassword"
                     android:maxLength="12"
 
@@ -165,7 +165,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/signup"
+                    android:id="@+id/mother_update"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
 
