--- a/app/src/main/res/layout/activity_mother_home.xml
+++ b/app/src/main/res/layout/activity_mother_home.xml
@@ -248,21 +248,22 @@
                     android:orientation="vertical">
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/FirstAid"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
-                        app:cardCornerRadius="20dp">
+                        app:cardCornerRadius="20dp"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground">
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="150dp"
+
                             android:gravity="center"
-                            android:orientation="vertical"
-                            android:clickable="true"
-                            android:foreground="?android:attr/selectableItemBackground">
+                            android:orientation="vertical">
 
                             <ImageView
-                                android:id="@+id/first_aid"
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 app:srcCompat="@drawable/info" />
