--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -159,7 +159,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/signup"
+                    android:id="@+id/mother_update"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
 
