--- a/app/src/main/res/layout/activity_firstaid.xml
+++ b/app/src/main/res/layout/activity_firstaid.xml
@@ -23,6 +23,7 @@
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/beforeprosob"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
@@ -39,7 +40,7 @@
                         <ImageView
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            app:srcCompat="@drawable/imgdoctorprofile" />
+                            app:srcCompat="@drawable/prosob" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -68,7 +69,7 @@
                         <ImageView
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            app:srcCompat="@drawable/imgdoctorprofile" />
+                            app:srcCompat="@drawable/newborn" />
 
                         <TextView
                             android:layout_width="wrap_content"
